--- a/gm-sample-worklog-service/build.gradle
+++ b/gm-sample-worklog-service/build.gradle
@@ -7,18 +7,29 @@ buildscript {
 	}
 	dependencies {
 		classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.0.BUILD-SNAPSHOT'
+		classpath 'com.h2database:h2:1.4.191'
 	}
+}
+
+plugins {
+    id "org.flywaydb.flyway" version "5.0.3"
+}
+
+flyway {
+    url = 'jdbc:h2:file:./gm-worklog'
+    user = 'sa'
 }
 
 apply plugin: 'java'
 // .classpath and .project are needed by vscode-java
 apply plugin: 'eclipse'
 apply plugin: 'application'
+apply plugin: 'org.springframework.boot'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-repositories {
+repositories { 
 	jcenter()
 	maven { url "http://repo.spring.io/snapshot" }
 	maven { url "http://repo.spring.io/milestone" }
@@ -26,7 +37,14 @@ repositories {
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web:1.5.9.RELEASE"
-    testCompile "org.springframework.boot:spring-boot-starter-test"
+    testCompile "org.springframework.boot:spring-boot-starter-test:1.5.9.RELEASE"
+	// https://mvnrepository.com/artifact/com.h2database/h2
+	testCompile group: 'com.h2database', name: 'h2', version: '1.3.148'
+	// https://mvnrepository.com/artifact/org.flywaydb/flyway-core
+	testCompile group: 'org.flywaydb', name: 'flyway-core', version: '5.0.3'
+	// https://spring.io/guides/gs/accessing-data-jpa/
+    compile "org.springframework.boot:spring-boot-starter-data-jpa:1.5.9.RELEASE"
+
 }
 
 mainClassName = "br.com.gm.worklog.EntryPoint"
