--- a/gm-sample-worklog-service/src/main/resources/application.properties
+++ b/gm-sample-worklog-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-app.name = GM Worklog Service
+app.name = GM Worklog Service - default profile
 database.url = jdbc:h2:file:./gm-worklog
 database.username = sa
 database.password = 
