more work on defining things. We'll go with EntityManager instead Repositories because there's still some JEE flowing there.

--- a/gm-sample-worklog-service/src/main/resources/application.properties
+++ b/gm-sample-worklog-service/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+# https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 app.name = GM Worklog Service - default profile
-database.url = jdbc:h2:file:./gm-worklog
-database.username = sa
-database.password = 
+spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:./gm-worklog
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.show-sql=true
+logging.level=DEBUG
