--- a/gm-sample-worklog-service/build.gradle
+++ b/gm-sample-worklog-service/build.gradle
@@ -16,8 +16,8 @@ plugins {
 }
 
 flyway {
-	// TODO ter a regra do flyway aqui é cômodo, 
-	// mas nos deixa com dois pontos de atenção para os dados de acesso ao banco
+	// TODO having the flyway task there is helpful however it demands 
+	// from us two attention points concerning database plumbing.
     url = 'jdbc:h2:file:./gm-worklog'
     user = 'sa'
 }
@@ -41,11 +41,10 @@ dependencies {
     testCompile "org.springframework.boot:spring-boot-starter-test:1.5.9.RELEASE"
 	// https://spring.io/guides/gs/accessing-data-jpa/
     compile "org.springframework.boot:spring-boot-starter-data-jpa:1.5.9.RELEASE"
+	// https://mvnrepository.com/artifact/com.h2database/h2
+	compile "com.h2database:h2:1.4.191"
+	// https://mvnrepository.com/artifact/org.flywaydb/flyway-core
+	compile "org.flywaydb:flyway-core:5.0.3"
 	// https://projectlombok.org/features/Data
 	compileOnly "org.projectlombok:lombok:1.16.16"
-	// https://mvnrepository.com/artifact/com.h2database/h2
-	compile group: 'com.h2database', name: 'h2', version: '1.3.148'
-	// https://mvnrepository.com/artifact/org.flywaydb/flyway-core
-	compile group: 'org.flywaydb', name: 'flyway-core', version: '5.0.3'
-
 }
