some unit tests. getting cool

--- a/gm-sample-worklog-service/build.gradle
+++ b/gm-sample-worklog-service/build.gradle
@@ -46,5 +46,13 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.flywaydb/flyway-core
 	compile "org.flywaydb:flyway-core:5.0.3"
 	// https://projectlombok.org/features/Data
-	compileOnly "org.projectlombok:lombok:1.16.16"
+	compileOnly "org.projectlombok:lombok:1.16.18"
+	// https://mvnrepository.com/artifact/junit/junit
+	testCompile "junit:junit:4.12"
+	// tried to add explicit dependency, no effect https://github.com/redhat-developer/vscode-java/issues/397
+	// https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.1-api
+	// compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.0.Final'
+	// https://mvnrepository.com/artifact/commons-codec/commons-codec
+	testCompile group: 'commons-codec', name: 'commons-codec', version: '1.11'
+
 }
