--- a/gm-sample-worklog-service/src/test/resources/application.properties
+++ b/gm-sample-worklog-service/src/test/resources/application.properties
@@ -2,6 +2,7 @@
 app.name = GM Worklog Service - testing profile
 spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
+# spring.datasource.url=jdbc:h2:mem:gm-worklog-test
 spring.datasource.url=jdbc:h2:file:./gm-worklog-test
 spring.datasource.username=sa
 spring.datasource.password=
