--- a/gm-sample-worklog-service/build.gradle
+++ b/gm-sample-worklog-service/build.gradle
@@ -58,5 +58,6 @@ dependencies {
 	// tried to add explicit dependency, no effect https://github.com/redhat-developer/vscode-java/issues/397
 	// https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.1-api
 	// compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.0.Final'
-
+	// https://github.com/jwtk/jjwt
+	compile 'io.jsonwebtoken:jjwt:0.9.0'
 }
