auth almost doing the job correctly. i could move the event log thing to the filter. or filters. audit could be almost transparent

--- a/gm-sample-worklog-service/src/main/resources/application.properties
+++ b/gm-sample-worklog-service/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
+
 app.name = GM Worklog Service - default profile
+
+banner.location=classpath:banner.txt
+
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
 spring.h2.console.enabled=true
+
 spring.datasource.url=jdbc:h2:file:./gm-worklog
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.show-sql=true
+
 logging.level=DEBUG
