--- a/gm-sample-worklog-service/src/main/resources/application.properties
+++ b/gm-sample-worklog-service/src/main/resources/application.properties
@@ -13,4 +13,7 @@ spring.datasource.url=jdbc:h2:file:./gm-worklog
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.cache.cache-names=eventlogs,eventlog,users,user,worklogs,worklog
+spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
+
 logging.level=DEBUG
