--- a/gm-sample-worklog-client/package.json
+++ b/gm-sample-worklog-client/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "Leonardo Silveira <somblriks@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "browserify": "^14.5.0",
     "browserify-css": "^0.14.0",
@@ -16,12 +16,14 @@
     "vueify": "^9.4.1"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.5.13",
     "vue-material": "^0.8.1",
     "vue-router": "^3.0.1"
   },
   "browserify": {
-    "transform":[
+    "transform": [
       "browserify-css",
       "vueify"
     ]
