--- a/gm-sample-worklog-client/package.json
+++ b/gm-sample-worklog-client/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.17.1",
     "material-design-icons-iconfont": "^3.0.3",
     "md5": "^2.2.1",
+    "moment": "^2.20.1",
     "vue": "^2.5.13",
     "vue-material": "^0.8.1",
     "vue-router": "^3.0.1"
